<resources>
    <string name="app_name">Solent Eat Out</string>
    <string name="save_all">Save all Restaurants</string>
    <string name="load_all">Load all Restaurants</string>
    <string name="addrestaurant">Add a restaurant</string>
    <string name="addrest">Add a restaurant</string>
    <string name="choose_pref">Choose preference</string>
    <string name="load_web">Load files from web</string>
    <string name="rest_name">Restaurant name</string>
    <string name="rest_address">Restaurant Address</string>
    <string name="add_rest">Add Restaurant</string>
    <string name="rest_cuisine">Cuisine</string>
    <string name="rest_rating">Rating 1-10</string>


</resources>
