<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv2" android:text="@string/rest_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sl1"
        android:layout_toLeftOf="@+id/btnAddRest"
        android:inputType="text"
        />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv1" android:text="@string/rest_address"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sl2"
        android:layout_toLeftOf="@+id/btnAddRest"
        android:inputType="text"
        />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv3" android:text="@string/rest_cuisine"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sl3"
        android:layout_toLeftOf="@+id/btnAddRest"
        android:inputType="text"
        />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv4" android:text="@string/rest_rating"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sl4"
        android:layout_toLeftOf="@+id/btnAddRest"
        android:inputType="numberSigned"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_rest"
        android:id="@+id/btnAddRest" />

</LinearLayout>